correcciones varias y agregar comentarios

--- a/index.html
+++ b/index.html
@@ -20,39 +20,48 @@
 				<a href="index.html"
 					><img src="images/logo.svg" alt="logo" class="logo"
 				/></a>
+
+				<!-- Menu de navegacion solo visible hasta 768px -->
 				<button class="burger only-mobile">
-					<img src="images/icon-hamburger.svg" />
+					<img src="images/icon-hamburger.svg" alt=""/>
 					<nav class="nav-header nav-header-mobile">
+
+						<!-- input type button solo sirve para hacer que el boton principal pierda el foco, cerrando asi el menu -->
 						<input type="button" class="close" value="x" />
-						<a href="">Sobre nosotros</a>
+						<a href="#">Sobre nosotros</a>
 						<a href="#servicios">Servicios</a>
-						<a href="">Proyectos</a>
-						<a href="">Contacto</a>
+						<a href="#">Proyectos</a>
+						<a href="#">Contacto</a>
 					</nav>
 				</button>
+
+				<!-- menu visible en vista desktop, width > 768px -->
 				<nav class="nav-header nav-header-desktop">
-					<a href="">Sobre nosotros</a>
+					<a href="#">Sobre nosotros</a>
 					<a href="#servicios">Servicios</a>
-					<a href="">Proyectos</a>
-					<a href="">Contacto</a>
+					<a href="#">Proyectos</a>
+					<a href="#">Contacto</a>
 				</nav>
 			</header>
 
 			<h1 class="titulo">We are creatives</h1>
+
 			<div class="flecha">
 				<a href="#servicios"
 					><img src="images/icon-arrow-down.svg" alt="Ir abajo"
 				/></a>
 			</div>
-		</section>
+		</section><!-- fin section home -->
+
 		<main class="container max-w" id="servicios">
-			<article class="grid-hijo">
+			<!-- fila 1 en desktop -->
+			<picture class="grid-hijo">
 				<img
 					src="images/desktop/image-transform.jpg"
 					alt="Imagen de un huevo sobre fondo amarillo"
 				/>
-			</article>
-			<article class="grid-hijo hijo-texto">
+			</picture>
+			<article class="grid-hijo hijo-texto servicio1">
 				<h2>Transformá tu marca</h2>
 				<p>
 					Somos una agencia creativa de servicio completo especializada en
@@ -65,12 +74,13 @@
 				<a href="" class="link">Más info</a>
 			</article>
 
-			<article class="grid-hijo">
+			<!-- fila 2 en desktop -->
+			<picture class="grid-hijo">
 				<img
 					src="images/desktop/image-stand-out.jpg"
 					alt="Imagen de una copa sobre un fondo salmón"
 				/>
-			</article>
+			</picture>
 			<article class="grid-hijo hijo-texto servicio2">
 				<h2>Destacá ante el público adecuado</h2>
 				<p>
@@ -81,6 +91,7 @@
 				<a href="" class="link">Más info</a>
 			</article>
 
+			<!-- fila 3 desktop -->
 			<article class="grid-hijo servicios d-grafico">
 				<div class="texto">
 					<h3>Diseño gráfico</h3>
@@ -101,6 +112,7 @@
 				</div>
 			</article>
 
+			<!-- seccion testimonios -->
 			<section class="testimonios">
 				<h2>Testimonios de nuestros clientes</h2>
 				<div class="flex-container">
@@ -138,8 +150,10 @@
 						</div>
 					</article>
 				</div>
-			</section>
-		</main>
+			</section><!-- fin seccion testimonios -->
+		</main><!-- fin main -->
+
+		<!-- div imagenes -->
 		<div class="imagenes max-w">
 			<img
 				src="images/desktop/image-gallery-milkbottles.jpg"
@@ -158,27 +172,28 @@
 				alt="Foto de cubos de azucar creativa"
 			/>
 		</div>
+
 		<footer class="max-w">
 			<div class="logo-footer">
 				<a href="index.html"><img src="images/logo.svg" alt="logo" /></a>
 			</div>
 			<nav class="nav-footer">
-				<a href="">Nosotros</a>
-				<a href="">Servicios</a>
-				<a href="">Proyectos</a>
+				<a href="#">Nosotros</a>
+				<a href="#servicios">Servicios</a>
+				<a href="#">Proyectos</a>
 			</nav>
 			<nav class="redes-sociales">
-				<a href="">
-					<img src="images/icon-facebook.svg" alt="" />
+				<a href="https://facebook.com" target="_blank" title="Ir a Facebook">
+					<img src="images/icon-facebook.svg" alt=""/>
 				</a>
-				<a href="">
-					<img src="images/icon-instagram.svg" alt="" />
+				<a href="https://instagram.com"  target="_blank" title="Ir a Instagram">
+					<img src="images/icon-instagram.svg" alt=""/>
 				</a>
-				<a href="">
-					<img src="images/icon-twitter.svg" alt="" />
+				<a href="https://twitter.com" target="_blank" title="Ir a Twitter">
+					<img src="images/icon-twitter.svg" alt=""/>
 				</a>
-				<a href="">
-					<img src="images/icon-pinterest.svg" alt="" />
+				<a href="https://pinterest.com" target="_blank" title="Ir a Pinterest">
+					<img src="images/icon-pinterest.svg" alt=""/>
 				</a>
 			</nav>
 			<div class="attribution">
