correcciones de accesibilidad

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+		<meta name="description" content="Desafio 'Sunnyside agency landing page' de Frontend Mentor creado por Nicolas Rodriguez">
 		<link
 			rel="icon"
 			type="image/png"
@@ -22,7 +22,7 @@
 				/></a>
 
 				<!-- Menu de navegacion solo visible hasta 768px -->
-				<button class="burger only-mobile">
+				<button class="burger only-mobile" aria-label="Abrir menu de navegación">
 					<img src="images/icon-hamburger.svg" alt=""/>
 					<nav class="nav-header nav-header-mobile">
 
@@ -48,7 +48,7 @@
 
 			<div class="flecha">
 				<a href="#servicios"
-					><img src="images/icon-arrow-down.svg" alt="Ir abajo"
+					><img src="images/icon-arrow-down.svg" alt="Ir abajo" width="35" height="115"
 				/></a>
 			</div>
 		</section><!-- fin section home -->
@@ -71,7 +71,7 @@
 					Atraiga a sus clientes a través de herramientas visuales convincentes
 					que hagan la mayor parte del marketing por usted.
 				</p>
-				<a href="" class="link">Más info</a>
+				<a href="#" class="link">Más info</a>
 			</article>
 
 			<!-- fila 2 en desktop -->
@@ -88,7 +88,7 @@
 					fotógrafos, videógrafos y redactores, construiremos y ampliaremos su
 					marca en lugares digitales.
 				</p>
-				<a href="" class="link">Más info</a>
+				<a href="#" class="link">Más info</a>
 			</article>
 
 			<!-- fila 3 desktop -->
@@ -117,7 +117,7 @@
 				<h2>Testimonios de nuestros clientes</h2>
 				<div class="flex-container">
 					<article class="testimonios-hijo">
-						<img src="images/image-emily.jpg" alt="Imagen de un cliente" />
+						<img src="images/image-emily.jpg" alt="Imagen de un cliente" width="100px" height="100px" />
 						<p>
 							We put our trust in Sunnyside and they delivered, making sure our
 							needs were met and deadlines were always hit.
@@ -128,7 +128,7 @@
 						</div>
 					</article>
 					<article class="testimonios-hijo">
-						<img src="images/image-thomas.jpg" alt="Logo de un cliente" />
+						<img src="images/image-thomas.jpg" alt="Logo de un cliente" width="100px" height="100px" />
 						<p>
 							Sunnyside’s enthusiasm coupled with their keen interest in our
 							brand’s success made it a satisfying and enjoyable experience.
@@ -139,7 +139,7 @@
 						</div>
 					</article>
 					<article class="testimonios-hijo">
-						<img src="images/image-jennie.jpg" alt="Logo de un cliente" />
+						<img src="images/image-jennie.jpg" alt="Logo de un cliente" width="100px" height="100px" />
 						<p>
 							Incredible end result! Our sales increased over 400% when we
 							worked with Sunnyside. Highly recommended!
@@ -157,19 +157,19 @@
 		<div class="imagenes max-w">
 			<img
 				src="images/desktop/image-gallery-milkbottles.jpg"
-				alt="Foto de botellas de leche creativa"
+				alt="Foto de botellas de leche creativa" width="50%" height="200px"
 			/>
 			<img
 				src="images/desktop/image-gallery-orange.jpg"
-				alt="Foto de media naranja creativa"
+				alt="Foto de media naranja creativa" width="50%" height="200px"
 			/>
 			<img
 				src="images/desktop/image-gallery-cone.jpg"
-				alt="Foto de un cono de helado creativo"
+				alt="Foto de un cono de helado creativo" width="50%" height="200px"
 			/>
 			<img
 				src="images/desktop/image-gallery-sugarcubes.jpg"
-				alt="Foto de cubos de azucar creativa"
+				alt="Foto de cubos de azucar creativa" width="50%" height="200px"
 			/>
 		</div>
 
@@ -183,22 +183,22 @@
 				<a href="#">Proyectos</a>
 			</nav>
 			<nav class="redes-sociales">
-				<a href="https://facebook.com" target="_blank" title="Ir a Facebook">
+				<a href="https://facebook.com" target="_blank" title="Ir a Facebook" rel="noopener">
 					<img src="images/icon-facebook.svg" alt=""/>
 				</a>
-				<a href="https://instagram.com"  target="_blank" title="Ir a Instagram">
+				<a href="https://instagram.com"  target="_blank" title="Ir a Instagram" rel="noopener">
 					<img src="images/icon-instagram.svg" alt=""/>
 				</a>
-				<a href="https://twitter.com" target="_blank" title="Ir a Twitter">
+				<a href="https://twitter.com" target="_blank" title="Ir a Twitter" rel="noopener">
 					<img src="images/icon-twitter.svg" alt=""/>
 				</a>
-				<a href="https://pinterest.com" target="_blank" title="Ir a Pinterest">
+				<a href="https://pinterest.com" target="_blank" title="Ir a Pinterest" rel="noopener">
 					<img src="images/icon-pinterest.svg" alt=""/>
 				</a>
 			</nav>
 			<div class="attribution">
 				Challenge by
-				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener"
 					>Frontend Mentor</a
 				>. Coded by <a href="#">Nicolas Rodriguez</a>.
 			</div>
